[gd_scene load_steps=102 format=3 uid="uid://koyd58kq2e1p"]

[ext_resource type="Script" path="res://UI/PowerTracker.gd" id="1_34utm"]
[ext_resource type="Texture2D" uid="uid://b14tg05ndbs1p" path="res://UI/Sprites/Power Tracker/previous power tileset.png" id="2_qnmok"]
[ext_resource type="Texture2D" uid="uid://trmrdc6clqus" path="res://Assets/Sprites/earth_symbol.png" id="3_10cr1"]
[ext_resource type="Texture2D" uid="uid://bwsf506lvk858" path="res://UI/Sprites/Power Tracker/Next Power Tileset.png" id="3_wyl25"]
[ext_resource type="Texture2D" uid="uid://d3cqbont2jfpe" path="res://Assets/Sprites/wind_symbol.png" id="4_0urd5"]
[ext_resource type="Texture2D" uid="uid://dpr6jt74l7nth" path="res://UI/Sprites/Power Tracker/Power Tracker Center Air-Sheet.png" id="4_fsw32"]
[ext_resource type="Texture2D" uid="uid://cg0ofefo10u0i" path="res://UI/Sprites/Power Tracker/Power Tracker Center-sheet.png" id="5_245uk"]
[ext_resource type="Texture2D" uid="uid://ciycph0wec0v5" path="res://UI/Sprites/Power Tracker/Power Tracker Center Controller.png" id="5_dkl3d"]
[ext_resource type="Texture2D" uid="uid://8rfqlpfsce8m" path="res://Assets/Sprites/water_symbol.png" id="5_rbynj"]
[ext_resource type="Texture2D" uid="uid://j6i1ehlae7gg" path="res://Assets/Sprites/fire_symbol.png" id="6_70mdx"]
[ext_resource type="Texture2D" uid="uid://bvgr2pp3h0j67" path="res://UI/Sprites/Power Tracker/Power Tracker Center Earth-sheet.png" id="6_tm53v"]
[ext_resource type="Texture2D" uid="uid://d28wxrwbptlqk" path="res://UI/Sprites/Power Tracker/Power Tracker Center Fire-sheet.png" id="7_ytr2v"]
[ext_resource type="Texture2D" uid="uid://e4s2vv7wh76v" path="res://UI/Sprites/Power Tracker/Power Tracker Center Water-sheet.png" id="8_kw16t"]
[ext_resource type="Texture2D" uid="uid://bkdn1yw4gd1pw" path="res://UI/Sprites/Power Tracker/Power Tracker Controls.png" id="9_37qgf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6076u"]
atlas = ExtResource("2_qnmok")
region = Rect2(220, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cvxu"]
atlas = ExtResource("2_qnmok")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cr04"]
atlas = ExtResource("2_qnmok")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw7jc"]
atlas = ExtResource("2_qnmok")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4xfl"]
atlas = ExtResource("2_qnmok")
region = Rect2(110, 0, 55, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_67fxo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6076u")
}],
"loop": true,
"name": &"Air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cvxu")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cr04")
}],
"loop": true,
"name": &"Earth",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw7jc")
}],
"loop": true,
"name": &"Fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4xfl")
}],
"loop": true,
"name": &"Water",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8b8c2"]
atlas = ExtResource("3_wyl25")
region = Rect2(220, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pftm"]
atlas = ExtResource("3_wyl25")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_nielf"]
atlas = ExtResource("3_wyl25")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_85akr"]
atlas = ExtResource("3_wyl25")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3xes"]
atlas = ExtResource("3_wyl25")
region = Rect2(110, 0, 55, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_fhoae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8b8c2")
}],
"loop": true,
"name": &"Air",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pftm")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nielf")
}],
"loop": true,
"name": &"Earth",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85akr")
}],
"loop": true,
"name": &"Fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3xes")
}],
"loop": true,
"name": &"Water",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7q7d8"]
atlas = ExtResource("4_fsw32")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvlam"]
atlas = ExtResource("4_fsw32")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvx4u"]
atlas = ExtResource("4_fsw32")
region = Rect2(110, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqyfc"]
atlas = ExtResource("4_fsw32")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0wwt"]
atlas = ExtResource("4_fsw32")
region = Rect2(220, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb5pe"]
atlas = ExtResource("5_245uk")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_76fxt"]
atlas = ExtResource("6_tm53v")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwryl"]
atlas = ExtResource("6_tm53v")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw7yp"]
atlas = ExtResource("6_tm53v")
region = Rect2(110, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_v67ue"]
atlas = ExtResource("6_tm53v")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmnkl"]
atlas = ExtResource("6_tm53v")
region = Rect2(220, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wglsf"]
atlas = ExtResource("7_ytr2v")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jj0m"]
atlas = ExtResource("7_ytr2v")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq4e2"]
atlas = ExtResource("7_ytr2v")
region = Rect2(110, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xi3n"]
atlas = ExtResource("7_ytr2v")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnyw"]
atlas = ExtResource("7_ytr2v")
region = Rect2(220, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_prrm6"]
atlas = ExtResource("5_245uk")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_elhww"]
atlas = ExtResource("5_245uk")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ionv"]
atlas = ExtResource("5_245uk")
region = Rect2(110, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_eloyo"]
atlas = ExtResource("5_245uk")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wmoo"]
atlas = ExtResource("5_245uk")
region = Rect2(220, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_30fd3"]
atlas = ExtResource("8_kw16t")
region = Rect2(0, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2mft"]
atlas = ExtResource("8_kw16t")
region = Rect2(55, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_sogup"]
atlas = ExtResource("8_kw16t")
region = Rect2(110, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_tifuv"]
atlas = ExtResource("8_kw16t")
region = Rect2(165, 0, 55, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnrot"]
atlas = ExtResource("8_kw16t")
region = Rect2(220, 0, 55, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1who"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q7d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvlam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvx4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqyfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0wwt")
}],
"loop": true,
"name": &"Air",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb5pe")
}],
"loop": true,
"name": &"Default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_76fxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwryl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw7yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v67ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmnkl")
}],
"loop": true,
"name": &"Earth",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wglsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jj0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq4e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xi3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnyw")
}],
"loop": true,
"name": &"Fire",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prrm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_elhww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ionv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eloyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wmoo")
}],
"loop": true,
"name": &"Multiple",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_30fd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2mft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sogup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tifuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnrot")
}],
"loop": true,
"name": &"Water",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xig27"]
atlas = ExtResource("3_10cr1")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3dri"]
atlas = ExtResource("3_10cr1")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8p4j"]
atlas = ExtResource("3_10cr1")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hanc6"]
atlas = ExtResource("3_10cr1")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7kq4"]
atlas = ExtResource("3_10cr1")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcdau"]
atlas = ExtResource("3_10cr1")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_57qjq"]
atlas = ExtResource("3_10cr1")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcpff"]
atlas = ExtResource("3_10cr1")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_slnx4"]
atlas = ExtResource("3_10cr1")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ulp"]
atlas = ExtResource("3_10cr1")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_emkus"]
atlas = ExtResource("3_10cr1")
region = Rect2(150, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_mismf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xig27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3dri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8p4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hanc6")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7kq4")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcdau")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_57qjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcpff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slnx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ulp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emkus")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rvyxe"]
atlas = ExtResource("4_0urd5")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yy17n"]
atlas = ExtResource("4_0urd5")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1yce"]
atlas = ExtResource("4_0urd5")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk8ql"]
atlas = ExtResource("4_0urd5")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_10nve"]
atlas = ExtResource("4_0urd5")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiqcu"]
atlas = ExtResource("4_0urd5")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_unowo"]
atlas = ExtResource("4_0urd5")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h74o"]
atlas = ExtResource("4_0urd5")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r8ht"]
atlas = ExtResource("4_0urd5")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkj3q"]
atlas = ExtResource("4_0urd5")
region = Rect2(150, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnld7"]
atlas = ExtResource("4_0urd5")
region = Rect2(50, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_wuktk"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvyxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yy17n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1yce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk8ql")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_10nve")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiqcu")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unowo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h74o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r8ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkj3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnld7")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ev2ed"]
atlas = ExtResource("5_rbynj")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptdu7"]
atlas = ExtResource("5_rbynj")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpir5"]
atlas = ExtResource("5_rbynj")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gof7"]
atlas = ExtResource("5_rbynj")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_icyo1"]
atlas = ExtResource("5_rbynj")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_1m5tg"]
atlas = ExtResource("5_rbynj")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6f8qp"]
atlas = ExtResource("5_rbynj")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwixd"]
atlas = ExtResource("5_rbynj")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_tefjw"]
atlas = ExtResource("5_rbynj")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuws8"]
atlas = ExtResource("5_rbynj")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_eimbg"]
atlas = ExtResource("5_rbynj")
region = Rect2(150, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_no181"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev2ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptdu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpir5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gof7")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icyo1")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m5tg")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6f8qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwixd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tefjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuws8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eimbg")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2d58"]
atlas = ExtResource("6_70mdx")
region = Rect2(175, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mn6k"]
atlas = ExtResource("6_70mdx")
region = Rect2(200, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_lihq0"]
atlas = ExtResource("6_70mdx")
region = Rect2(225, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnmqo"]
atlas = ExtResource("6_70mdx")
region = Rect2(250, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_qojq6"]
atlas = ExtResource("6_70mdx")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqs83"]
atlas = ExtResource("6_70mdx")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_e531v"]
atlas = ExtResource("6_70mdx")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_uan1j"]
atlas = ExtResource("6_70mdx")
region = Rect2(75, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_o62im"]
atlas = ExtResource("6_70mdx")
region = Rect2(100, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_agjf3"]
atlas = ExtResource("6_70mdx")
region = Rect2(125, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_rj0fl"]
atlas = ExtResource("6_70mdx")
region = Rect2(150, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_asokx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2d58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mn6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lihq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnmqo")
}],
"loop": true,
"name": &"Symbol Active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qojq6")
}],
"loop": true,
"name": &"Symbol Off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqs83")
}],
"loop": true,
"name": &"Symbol On",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e531v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uan1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o62im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agjf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rj0fl")
}],
"loop": true,
"name": &"Symbol Ready",
"speed": 5.0
}]

[node name="PowerTracker" type="CanvasLayer"]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("1_34utm")

[node name="PreviousPower" type="AnimatedSprite2D" parent="."]
position = Vector2(48.1667, 17.3333)
sprite_frames = SubResource("SpriteFrames_67fxo")
animation = &"Air"

[node name="NextPower" type="AnimatedSprite2D" parent="."]
position = Vector2(47.8333, 17.3333)
sprite_frames = SubResource("SpriteFrames_fhoae")
animation = &"Water"

[node name="CenterRing" type="AnimatedSprite2D" parent="."]
position = Vector2(48.1667, 17.3333)
sprite_frames = SubResource("SpriteFrames_k1who")
animation = &"Default"
frame_progress = 0.730685

[node name="CenterRingControls" type="Sprite2D" parent="."]
position = Vector2(48.1667, 17.3333)
texture = ExtResource("9_37qgf")

[node name="CenterRingController" type="Sprite2D" parent="."]
visible = false
position = Vector2(48.1667, 17.3333)
texture = ExtResource("5_dkl3d")

[node name="EarthSymbol" type="AnimatedSprite2D" parent="." groups=["PowerSymbol"]]
position = Vector2(48.167, 17.8)
sprite_frames = SubResource("SpriteFrames_mismf")
animation = &"Symbol Active"

[node name="AirSymbol" type="AnimatedSprite2D" parent="." groups=["PowerSymbol"]]
visible = false
position = Vector2(48.167, 17.8)
sprite_frames = SubResource("SpriteFrames_wuktk")
animation = &"Symbol On"

[node name="WaterSymbol" type="AnimatedSprite2D" parent="." groups=["PowerSymbol"]]
visible = false
position = Vector2(48.167, 17.8)
sprite_frames = SubResource("SpriteFrames_no181")
animation = &"Symbol On"
frame_progress = 0.490272

[node name="FireSymbol" type="AnimatedSprite2D" parent="." groups=["PowerSymbol"]]
visible = false
position = Vector2(48.167, 17.8)
sprite_frames = SubResource("SpriteFrames_asokx")
animation = &"Symbol Ready"
frame_progress = 0.829404
